添加应用程序配置参数信息

--- a/src/Maple.Web.App/Maple.Web.App.csproj
+++ b/src/Maple.Web.App/Maple.Web.App.csproj
@@ -5,7 +5,37 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="App_Data\browscap.xml" />
+    <None Remove="App_Data\DataProtectionKeys\Index.htm" />
+    <None Remove="App_Data\Pdf\FreeSerif.ttf" />
+    <None Remove="App_Data\TempUploads\Index.htm" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="App_Data\browscap.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="App_Data\DataProtectionKeys\Index.htm">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="App_Data\Pdf\FreeSerif.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="App_Data\TempUploads\Index.htm">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
