--- a/src/Maple.Web.App/Maple.Web.App.csproj
+++ b/src/Maple.Web.App/Maple.Web.App.csproj
@@ -27,8 +27,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Maple.Core\Maple.Core.csproj" />
+    <ProjectReference Include="..\Maple.Web.Framework\Maple.Web.Framework.csproj" />
   </ItemGroup>
 
   <ItemGroup>
