--- a/src/Maple.Core/Maple.Core.csproj
+++ b/src/Maple.Core/Maple.Core.csproj
@@ -1,15 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netcoreapp2.0;net461</TargetFrameworks>
+    <Company>Maple</Company>
+    <Product>Maple</Product>
+    <PackageLicenseUrl>https://github.com/fengqinhua/Maple/blob/master/LICENSE</PackageLicenseUrl>
+    <Copyright>Copyright © Maple</Copyright>
+    <PackageProjectUrl>https://github.com/fengqinhua/Maple</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/fengqinhua/Maple</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <Authors>Anthony</Authors>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.6.2" />
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
-    <PackageReference Include="AutoMapper" Version="6.2.2" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
