项目类型修改为netstandard2

--- a/src/Maple.Services/Maple.Services.csproj
+++ b/src/Maple.Services/Maple.Services.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netcoreapp2.0;net461</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Copyright>Copyright © Maple</Copyright>
     <Company>Maple</Company>
     <Authors>Anthony</Authors>
