--- a/src/Maple.Web.Framework/Maple.Web.Framework.csproj
+++ b/src/Maple.Web.Framework/Maple.Web.Framework.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netcoreapp2.0;net461</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Anthony</Authors>
     <Company>Maple</Company>
     <Product>Maple</Product>
