--- a/src/Maple.Plugs/Maple.CAA/Maple.CAA.csproj
+++ b/src/Maple.Plugs/Maple.CAA/Maple.CAA.csproj
@@ -11,11 +11,11 @@
     <RepositoryType>Git</RepositoryType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
-    <OutputPath>..\..\Maple.Web.App\Plugins\Maple.CAA</OutputPath>
+    <OutputPath>..\..\Maple.Web\Plugins\Maple.CAA</OutputPath>
     <OutDir>$(OutputPath)</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
-    <OutputPath>..\..\Maple.Web.App\Plugins\Maple.CAA</OutputPath>
+    <OutputPath>..\..\Maple.Web\Plugins\Maple.CAA</OutputPath>
     <OutDir>$(OutputPath)</OutDir>
   </PropertyGroup>
   <ItemGroup>
@@ -30,8 +30,8 @@
     <ProjectReference Include="..\..\Maple.Web.Framework\Maple.Web.Framework.csproj" />
   </ItemGroup>
   <!-- Build完成后清理重复的动态库 -->
-  <UsingTask TaskName="ClearPluginsPathTask" AssemblyFile="..\..\Maple.Tools\Dll\Maple.BuildTask.dll" /> 
+  <UsingTask TaskName="ClearPluginsPathTask" AssemblyFile="..\..\Maple.Tools\Build\Maple.BuildTask.dll" /> 
   <Target Name="MapleBuildTaskTarget" AfterTargets="Build">
-    <ClearPluginsPathTask WebHostPath="$([System.IO.Path]::GetFullPath('..\..\Maple.Web.App\bin\$(Configuration)'))" PluginPath="$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)\$(OutDir)'))" SaveLocalesFolders="true" />
+    <ClearPluginsPathTask WebHostPath="$([System.IO.Path]::GetFullPath('..\..\Maple.Web\bin\$(Configuration)'))" PluginPath="$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)\$(OutDir)'))" SaveLocalesFolders="true" />
   </Target> 
 </Project>
