--- a/src/Maple.Web/web.config
+++ b/src/Maple.Web/web.config
@@ -21,4 +21,9 @@
       <environmentVariables />
     </aspNetCore>
   </system.webServer>
+  <!--<runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="Plugins\bin" />
+    </assemblyBinding>
+  </runtime>-->
 </configuration>
