继续插件框架移植

--- a/src/Maple.Plugs/Maple.Foundation.CAA/Maple.Foundation.CAA.csproj
+++ b/src/Maple.Plugs/Maple.Foundation.CAA/Maple.Foundation.CAA.csproj
@@ -23,4 +23,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Maple.Core\Maple.Core.csproj" />
+  </ItemGroup>
 </Project>
