--- a/src/Maple.Plugs/Maple.Foundation.Setup/Maple.Foundation.Setup.csproj
+++ b/src/Maple.Plugs/Maple.Foundation.Setup/Maple.Foundation.Setup.csproj
@@ -23,5 +23,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Maple.Core\Maple.Core.csproj" />
+  </ItemGroup>
   
 </Project>
