添加Install相关MVC文件

--- a/src/Maple.Plugs/Maple.Foundation.Setup/Maple.Foundation.Setup.csproj
+++ b/src/Maple.Plugs/Maple.Foundation.Setup/Maple.Foundation.Setup.csproj
@@ -24,7 +24,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Maple.Core\Maple.Core.csproj" />
+    <ProjectReference Include="..\..\Maple.Web.Framework\Maple.Web.Framework.csproj" />
   </ItemGroup>
   
 </Project>
