--- a/src/Maple.Plugs/Maple.Foundation.Setup/Maple.Foundation.Setup.csproj
+++ b/src/Maple.Plugs/Maple.Foundation.Setup/Maple.Foundation.Setup.csproj
@@ -19,7 +19,13 @@
     <ClearPluginsPathTask WebHostPath="$([System.IO.Path]::GetFullPath('..\..\Maple.Web\bin\$(Configuration)'))" PluginPath="$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)\$(OutDir)'))" SaveLocalesFolders="true" />
   </Target>
   <ItemGroup>
+    <None Remove="Views\Install\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="plugin.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\Install\Index.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
