--- a/src/Maple.Web/appsettings.json
+++ b/src/Maple.Web/appsettings.json
@@ -38,6 +38,8 @@
     //程序启动时是否清理 /Plugins/bin 目录
     "ClearPluginShadowDirectoryOnStartup": true,
     //是否绕过一些安全检查直接将插件加载至应用程序上下文中
-    "UseUnsafeLoadAssembly": true
+    "UseUnsafeLoadAssembly": true,
+    //设置静态文件后缀的黑名单，多个文件用 ; 或 , 分割开
+    "PluginStaticFileExtensionsBlacklist": ""
   }
 }
