--- a/src/Maple.Services/Maple.Services.csproj
+++ b/src/Maple.Services/Maple.Services.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Maple.Core\Maple.Core.csproj" />
   </ItemGroup>
 
