--- a/src/Maple.Web.Framework/Maple.Web.Framework.csproj
+++ b/src/Maple.Web.Framework/Maple.Web.Framework.csproj
@@ -13,7 +13,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="2.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Maple.Core\Maple.Core.csproj" />
+    <ProjectReference Include="..\Maple.Services\Maple.Services.csproj" />
   </ItemGroup>
 
 </Project>
