--- a/src/Maple.Web/appsettings.json
+++ b/src/Maple.Web/appsettings.json
@@ -40,6 +40,8 @@
     //是否绕过一些安全检查直接将插件加载至应用程序上下文中
     "UseUnsafeLoadAssembly": true,
     //设置静态文件后缀的黑名单，多个文件用 ; 或 , 分割开
-    "PluginStaticFileExtensionsBlacklist": ""
+    "PluginStaticFileExtensionsBlacklist": "",
+    //获取或设置 是否需要记录SQL运行日志
+    "NeedLog": ""
   }
 }
