增添系统配置项

--- a/src/Maple.Web/appsettings.json
+++ b/src/Maple.Web/appsettings.json
@@ -41,7 +41,9 @@
     "UseUnsafeLoadAssembly": true,
     //设置静态文件后缀的黑名单，多个文件用 ; 或 , 分割开
     "PluginStaticFileExtensionsBlacklist": "",
+    //获取或设置 执行DbCommand超时时间（秒）
+    "DbCommandTimeOut": 10,
     //获取或设置 是否需要记录SQL运行日志
-    "NeedLog": ""
+    "DbSqlNeedLog": ""
   }
 }
