--- a/src/Maple.Tools/Maple.Data.PerformanceTests/Maple.Data.PerformanceTests.csproj
+++ b/src/Maple.Tools/Maple.Data.PerformanceTests/Maple.Data.PerformanceTests.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="MySql.Data" Version="8.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Maple.Core\Maple.Core.csproj" />
+  </ItemGroup>
+
 </Project>
