--- a/src/Maple.Tools/Maple.Data.PerformanceTests/Maple.Data.PerformanceTests.csproj
+++ b/src/Maple.Tools/Maple.Data.PerformanceTests/Maple.Data.PerformanceTests.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.0" />
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="MySql.Data" Version="8.0.12" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.12" />
