--- a/src/Maple.Tools/Maple.Data.PerformanceTests/Maple.Data.PerformanceTests.csproj
+++ b/src/Maple.Tools/Maple.Data.PerformanceTests/Maple.Data.PerformanceTests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Maple.Core\Maple.Core.csproj" />
+    <ProjectReference Include="..\..\Maple.Tests\Maple.Core.Tests\Maple.Core.Tests.csproj" />
   </ItemGroup>
 
 </Project>
