重构单元测试项目结构

--- a/src/Maple.Tests/Maple.Core.Tests/Maple.Core.Tests.csproj
+++ b/src/Maple.Tests/Maple.Core.Tests/Maple.Core.Tests.csproj
@@ -7,15 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="MySql.Data" Version="8.0.12" />
     <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.109" />
-    <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Maple.Core.Tests.Domain\Maple.Core.Tests.Domain.csproj" />
     <ProjectReference Include="..\..\Maple.Core\Maple.Core.csproj" />
   </ItemGroup>
 
