--- a/src/Maple.Tools/Maple.Data.PerformanceTests/Maple.Data.PerformanceTests.csproj
+++ b/src/Maple.Tools/Maple.Data.PerformanceTests/Maple.Data.PerformanceTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Maple.Core.Tests.Domain\Maple.Core.Tests.Domain.csproj" />
     <ProjectReference Include="..\..\Maple.Core\Maple.Core.csproj" />
-    <ProjectReference Include="..\..\Maple.Tests\Maple.Core.Tests\Maple.Core.Tests.csproj" />
   </ItemGroup>
 
 </Project>
