修改配置文件

--- a/src/Maple.Web/appsettings.json
+++ b/src/Maple.Web/appsettings.json
@@ -44,6 +44,6 @@
     //获取或设置 执行DbCommand超时时间（秒）
     "DbCommandTimeOut": 10,
     //获取或设置 是否需要记录SQL运行日志
-    "DbSqlNeedLog": ""
+    "DbSqlNeedLog": true
   }
 }
